internal/parser/y.output

state 0
	$accept: .program $end 
	beforeProgram: .    (2)

	.  reduce 2 (src line 83)

	program  goto 1
	beforeProgram  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  beforeProgram.body 

	IDENTIFIER  shift 9
	CLICK  shift 10
	INPUT  shift 11
	PRINT  shift 12
	SLOW  shift 13
	RETURN  shift 7
	FOR  shift 14
	SELECT  shift 15
	.  error

	body  goto 3
	statements  goto 4
	returnStatements  goto 5
	statement  goto 6
	loopStatement  goto 8

state 3
	program:  beforeProgram body.    (1)

	.  reduce 1 (src line 79)


state 4
	body:  statements.returnStatements 
	statements:  statements.statement 

	IDENTIFIER  shift 9
	CLICK  shift 10
	INPUT  shift 11
	PRINT  shift 12
	SLOW  shift 13
	RETURN  shift 7
	FOR  shift 14
	SELECT  shift 15
	.  error

	returnStatements  goto 16
	statement  goto 17
	loopStatement  goto 8

state 5
	body:  returnStatements.    (4)

	.  reduce 4 (src line 89)


state 6
	statements:  statement.    (5)

	.  reduce 5 (src line 92)


state 7
	returnStatements:  RETURN.returnList0 SEMICOLON 
	returnStatements:  RETURN.DISTINCT returnList SEMICOLON 
	returnList0: .    (23)

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	DISTINCT  shift 19
	AT  shift 31
	.  reduce 23 (src line 130)

	atomExpression  goto 21
	returnList0  goto 18
	returnList  goto 20
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 8
	returnStatements:  loopStatement.body 

	IDENTIFIER  shift 9
	CLICK  shift 10
	INPUT  shift 11
	PRINT  shift 12
	SLOW  shift 13
	RETURN  shift 7
	FOR  shift 14
	SELECT  shift 15
	.  error

	body  goto 34
	statements  goto 4
	returnStatements  goto 5
	statement  goto 6
	loopStatement  goto 8

state 9
	statement:  IDENTIFIER.ASSIGN expression SEMICOLON 

	ASSIGN  shift 35
	.  error


state 10
	statement:  CLICK.atomExpression clickOptions0 SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 36
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 11
	statement:  INPUT.atomExpression IN atomExpression SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 37
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 12
	statement:  PRINT.expression SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 38
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 13
	statement:  SLOW.SEMICOLON 

	SEMICOLON  shift 52
	.  error


state 14
	loopStatement:  FOR.loopVariable IN expression SEMICOLON 

	IDENTIFIER  shift 54
	.  error

	loopVariable  goto 53

state 15
	loopStatement:  SELECT.expression AS loopVariable FROM expression selectOptions0 SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 55
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 16
	body:  statements returnStatements.    (3)

	.  reduce 3 (src line 87)


state 17
	statements:  statements statement.    (6)

	.  reduce 6 (src line 94)


state 18
	returnStatements:  RETURN returnList0.SEMICOLON 

	SEMICOLON  shift 56
	.  error


state 19
	returnStatements:  RETURN DISTINCT.returnList SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 21
	returnList  goto 57
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 20
	returnList0:  returnList.    (24)
	returnList:  returnList.COMMA atomExpression 

	COMMA  shift 58
	.  reduce 24 (src line 132)


state 21
	returnList:  atomExpression.    (25)

	.  reduce 25 (src line 135)


state 22
	atomExpression:  litteral.    (47)

	.  reduce 47 (src line 197)


state 23
	atomExpression:  variable.    (48)

	.  reduce 48 (src line 199)


state 24
	atomExpression:  LPAREN.expression RPAREN 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 59
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 25
	litteral:  STRING.    (50)

	.  reduce 50 (src line 203)


state 26
	litteral:  NUMBER.    (51)

	.  reduce 51 (src line 205)


state 27
	litteral:  BOOL.    (52)

	.  reduce 52 (src line 206)


state 28
	litteral:  litteralArray.    (53)

	.  reduce 53 (src line 207)


state 29
	litteral:  litteralObject.    (54)

	.  reduce 54 (src line 208)


state 30
	variable:  IDENTIFIER.    (36)

	.  reduce 36 (src line 163)


state 31
	variable:  AT.IDENTIFIER 

	IDENTIFIER  shift 60
	.  error


state 32
	litteralArray:  LBRACKET.RBRACKET 
	litteralArray:  LBRACKET.expressionList RBRACKET 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	RBRACKET  shift 61
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 63
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29
	expressionList  goto 62

state 33
	litteralObject:  LBRACE.RBRACE 
	litteralObject:  LBRACE.keyValueList RBRACE 

	IDENTIFIER  shift 68
	RBRACE  shift 64
	.  error

	key  goto 67
	keyValueList  goto 65
	keyValue  goto 66

state 34
	returnStatements:  loopStatement body.    (22)

	.  reduce 22 (src line 127)


state 35
	statement:  IDENTIFIER ASSIGN.expression SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 69
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 36
	statement:  CLICK atomExpression.clickOptions0 SEMICOLON 
	clickOptions0: .    (12)

	IDENTIFIER  shift 30
	LEFT  shift 73
	RIGHT  shift 74
	MIDDLE  shift 75
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	AT  shift 31
	.  reduce 12 (src line 107)

	atomExpression  goto 76
	clickOptions0  goto 70
	clickOptions  goto 71
	clickOption  goto 72
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 37
	statement:  INPUT atomExpression.IN atomExpression SEMICOLON 

	IN  shift 77
	.  error


state 38
	statement:  PRINT expression.SEMICOLON 
	expression:  expression.ope2Bool expression1 

	SEMICOLON  shift 78
	AND  shift 80
	OR  shift 81
	.  error

	ope2Bool  goto 79

state 39
	expression:  expression1.    (40)
	expression1:  expression1.ope2 expression2 

	PLUS  shift 83
	MINUS  shift 84
	MULTI  shift 85
	DIV  shift 86
	MOD  shift 87
	EQ  shift 89
	NEQ  shift 90
	LT  shift 93
	LTE  shift 94
	GT  shift 91
	GTE  shift 92
	RANGE  shift 88
	.  reduce 40 (src line 179)

	ope2  goto 82

state 40
	expression1:  expression2.    (42)

	.  reduce 42 (src line 184)


state 41
	expression2:  ope1.expression2 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 50
	variable  goto 23
	expression2  goto 95
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 42
	expression2:  expression3.    (44)

	.  reduce 44 (src line 189)


state 43
	ope1:  PLUS.    (66)

	.  reduce 66 (src line 240)


state 44
	ope1:  MINUS.    (67)

	.  reduce 67 (src line 242)


state 45
	ope1:  PLUSPLUS.    (68)

	.  reduce 68 (src line 243)


state 46
	ope1:  MINUSMINUS.    (69)

	.  reduce 69 (src line 244)


state 47
	ope1:  ABS.    (70)

	.  reduce 70 (src line 245)


state 48
	ope1:  LEN.    (71)

	.  reduce 71 (src line 246)


state 49
	ope1:  NOT.    (72)

	.  reduce 72 (src line 247)


state 50
	expression3:  atomExpression.    (45)
	accessExpression:  atomExpression.LBRACKET expression RBRACKET 
	accessExpression:  atomExpression.DOT key 

	LBRACKET  shift 96
	DOT  shift 97
	.  reduce 45 (src line 192)


state 51
	expression3:  accessExpression.    (46)

	.  reduce 46 (src line 194)


state 52
	statement:  SLOW SEMICOLON.    (11)

	.  reduce 11 (src line 104)


state 53
	loopStatement:  FOR loopVariable.IN expression SEMICOLON 

	IN  shift 98
	.  error


state 54
	loopVariable:  IDENTIFIER.    (29)

	.  reduce 29 (src line 144)


state 55
	loopStatement:  SELECT expression.AS loopVariable FROM expression selectOptions0 SEMICOLON 
	expression:  expression.ope2Bool expression1 

	AS  shift 99
	AND  shift 80
	OR  shift 81
	.  error

	ope2Bool  goto 79

state 56
	returnStatements:  RETURN returnList0 SEMICOLON.    (20)

	.  reduce 20 (src line 124)


state 57
	returnStatements:  RETURN DISTINCT returnList.SEMICOLON 
	returnList:  returnList.COMMA atomExpression 

	SEMICOLON  shift 100
	COMMA  shift 58
	.  error


state 58
	returnList:  returnList COMMA.atomExpression 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 101
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 59
	expression:  expression.ope2Bool expression1 
	atomExpression:  LPAREN expression.RPAREN 

	RPAREN  shift 102
	AND  shift 80
	OR  shift 81
	.  error

	ope2Bool  goto 79

state 60
	variable:  AT IDENTIFIER.    (37)

	.  reduce 37 (src line 165)


state 61
	litteralArray:  LBRACKET RBRACKET.    (57)

	.  reduce 57 (src line 216)


state 62
	litteralArray:  LBRACKET expressionList.RBRACKET 
	expressionList:  expressionList.COMMA expression 

	COMMA  shift 104
	RBRACKET  shift 103
	.  error


state 63
	expression:  expression.ope2Bool expression1 
	expressionList:  expression.    (59)

	AND  shift 80
	OR  shift 81
	.  reduce 59 (src line 221)

	ope2Bool  goto 79

state 64
	litteralObject:  LBRACE RBRACE.    (61)

	.  reduce 61 (src line 226)


state 65
	litteralObject:  LBRACE keyValueList.RBRACE 
	keyValueList:  keyValueList.COMMA keyValue 

	COMMA  shift 106
	RBRACE  shift 105
	.  error


state 66
	keyValueList:  keyValue.    (63)

	.  reduce 63 (src line 231)


state 67
	keyValue:  key.COLON expression 

	COLON  shift 107
	.  error


state 68
	key:  IDENTIFIER.    (38)

	.  reduce 38 (src line 168)


state 69
	statement:  IDENTIFIER ASSIGN expression.SEMICOLON 
	expression:  expression.ope2Bool expression1 

	SEMICOLON  shift 108
	AND  shift 80
	OR  shift 81
	.  error

	ope2Bool  goto 79

state 70
	statement:  CLICK atomExpression clickOptions0.SEMICOLON 

	SEMICOLON  shift 109
	.  error


state 71
	clickOptions0:  clickOptions.    (13)
	clickOptions:  clickOptions.clickOption 

	IDENTIFIER  shift 30
	LEFT  shift 73
	RIGHT  shift 74
	MIDDLE  shift 75
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	AT  shift 31
	.  reduce 13 (src line 109)

	atomExpression  goto 76
	clickOption  goto 110
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 72
	clickOptions:  clickOption.    (14)

	.  reduce 14 (src line 112)


state 73
	clickOption:  LEFT.    (16)

	.  reduce 16 (src line 117)


state 74
	clickOption:  RIGHT.    (17)

	.  reduce 17 (src line 119)


state 75
	clickOption:  MIDDLE.    (18)

	.  reduce 18 (src line 120)


state 76
	clickOption:  atomExpression.    (19)

	.  reduce 19 (src line 121)


state 77
	statement:  INPUT atomExpression IN.atomExpression SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	NUMBER  shift 26
	BOOL  shift 27
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 111
	variable  goto 23
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 78
	statement:  PRINT expression SEMICOLON.    (10)

	.  reduce 10 (src line 103)


state 79
	expression:  expression ope2Bool.expression1 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 50
	variable  goto 23
	expression1  goto 112
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 80
	ope2Bool:  AND.    (85)

	.  reduce 85 (src line 266)


state 81
	ope2Bool:  OR.    (86)

	.  reduce 86 (src line 268)


state 82
	expression1:  expression1 ope2.expression2 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	atomExpression  goto 50
	variable  goto 23
	expression2  goto 113
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 83
	ope2:  PLUS.    (73)

	.  reduce 73 (src line 251)


state 84
	ope2:  MINUS.    (74)

	.  reduce 74 (src line 253)


state 85
	ope2:  MULTI.    (75)

	.  reduce 75 (src line 254)


state 86
	ope2:  DIV.    (76)

	.  reduce 76 (src line 255)


state 87
	ope2:  MOD.    (77)

	.  reduce 77 (src line 256)


state 88
	ope2:  RANGE.    (78)

	.  reduce 78 (src line 257)


state 89
	ope2:  EQ.    (79)

	.  reduce 79 (src line 258)


state 90
	ope2:  NEQ.    (80)

	.  reduce 80 (src line 259)


state 91
	ope2:  GT.    (81)

	.  reduce 81 (src line 260)


state 92
	ope2:  GTE.    (82)

	.  reduce 82 (src line 261)


state 93
	ope2:  LT.    (83)

	.  reduce 83 (src line 262)


state 94
	ope2:  LTE.    (84)

	.  reduce 84 (src line 263)


state 95
	expression2:  ope1 expression2.    (43)

	.  reduce 43 (src line 187)


state 96
	accessExpression:  atomExpression LBRACKET.expression RBRACKET 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 114
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 97
	accessExpression:  atomExpression DOT.key 

	IDENTIFIER  shift 68
	.  error

	key  goto 115

state 98
	loopStatement:  FOR loopVariable IN.expression SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 116
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 99
	loopStatement:  SELECT expression AS.loopVariable FROM expression selectOptions0 SEMICOLON 

	IDENTIFIER  shift 54
	.  error

	loopVariable  goto 117

state 100
	returnStatements:  RETURN DISTINCT returnList SEMICOLON.    (21)

	.  reduce 21 (src line 126)


state 101
	returnList:  returnList COMMA atomExpression.    (26)

	.  reduce 26 (src line 137)


state 102
	atomExpression:  LPAREN expression RPAREN.    (49)

	.  reduce 49 (src line 200)


state 103
	litteralArray:  LBRACKET expressionList RBRACKET.    (58)

	.  reduce 58 (src line 218)


state 104
	expressionList:  expressionList COMMA.expression 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 118
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 105
	litteralObject:  LBRACE keyValueList RBRACE.    (62)

	.  reduce 62 (src line 228)


state 106
	keyValueList:  keyValueList COMMA.keyValue 

	IDENTIFIER  shift 68
	.  error

	key  goto 67
	keyValue  goto 119

state 107
	keyValue:  key COLON.expression 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 120
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 108
	statement:  IDENTIFIER ASSIGN expression SEMICOLON.    (7)

	.  reduce 7 (src line 97)


state 109
	statement:  CLICK atomExpression clickOptions0 SEMICOLON.    (8)

	.  reduce 8 (src line 99)


state 110
	clickOptions:  clickOptions clickOption.    (15)

	.  reduce 15 (src line 114)


state 111
	statement:  INPUT atomExpression IN atomExpression.SEMICOLON 

	SEMICOLON  shift 121
	.  error


state 112
	expression:  expression ope2Bool expression1.    (39)
	expression1:  expression1.ope2 expression2 

	PLUS  shift 83
	MINUS  shift 84
	MULTI  shift 85
	DIV  shift 86
	MOD  shift 87
	EQ  shift 89
	NEQ  shift 90
	LT  shift 93
	LTE  shift 94
	GT  shift 91
	GTE  shift 92
	RANGE  shift 88
	.  reduce 39 (src line 177)

	ope2  goto 82

state 113
	expression1:  expression1 ope2 expression2.    (41)

	.  reduce 41 (src line 182)


state 114
	expression:  expression.ope2Bool expression1 
	accessExpression:  atomExpression LBRACKET expression.RBRACKET 

	RBRACKET  shift 122
	AND  shift 80
	OR  shift 81
	.  error

	ope2Bool  goto 79

state 115
	accessExpression:  atomExpression DOT key.    (56)

	.  reduce 56 (src line 213)


state 116
	loopStatement:  FOR loopVariable IN expression.SEMICOLON 
	expression:  expression.ope2Bool expression1 

	SEMICOLON  shift 123
	AND  shift 80
	OR  shift 81
	.  error

	ope2Bool  goto 79

state 117
	loopStatement:  SELECT expression AS loopVariable.FROM expression selectOptions0 SEMICOLON 

	FROM  shift 124
	.  error


state 118
	expression:  expression.ope2Bool expression1 
	expressionList:  expressionList COMMA expression.    (60)

	AND  shift 80
	OR  shift 81
	.  reduce 60 (src line 223)

	ope2Bool  goto 79

state 119
	keyValueList:  keyValueList COMMA keyValue.    (64)

	.  reduce 64 (src line 233)


state 120
	expression:  expression.ope2Bool expression1 
	keyValue:  key COLON expression.    (65)

	AND  shift 80
	OR  shift 81
	.  reduce 65 (src line 236)

	ope2Bool  goto 79

state 121
	statement:  INPUT atomExpression IN atomExpression SEMICOLON.    (9)

	.  reduce 9 (src line 100)


state 122
	accessExpression:  atomExpression LBRACKET expression RBRACKET.    (55)

	.  reduce 55 (src line 211)


state 123
	loopStatement:  FOR loopVariable IN expression SEMICOLON.    (27)

	.  reduce 27 (src line 139)


state 124
	loopStatement:  SELECT expression AS loopVariable FROM.expression selectOptions0 SEMICOLON 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 125
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 125
	loopStatement:  SELECT expression AS loopVariable FROM expression.selectOptions0 SEMICOLON 
	expression:  expression.ope2Bool expression1 
	selectOptions0: .    (30)

	WHERE  shift 129
	LIMIT  shift 130
	AND  shift 80
	OR  shift 81
	.  reduce 30 (src line 148)

	selectOptions0  goto 126
	selectOptions  goto 127
	selectOption  goto 128
	ope2Bool  goto 79

state 126
	loopStatement:  SELECT expression AS loopVariable FROM expression selectOptions0.SEMICOLON 

	SEMICOLON  shift 131
	.  error


state 127
	selectOptions0:  selectOptions.    (31)
	selectOptions:  selectOptions.selectOption 

	WHERE  shift 129
	LIMIT  shift 130
	.  reduce 31 (src line 150)

	selectOption  goto 132

state 128
	selectOptions:  selectOption.    (32)

	.  reduce 32 (src line 153)


state 129
	selectOption:  WHERE.expression 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 133
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 130
	selectOption:  LIMIT.expression 

	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 48
	NUMBER  shift 26
	PLUS  shift 43
	MINUS  shift 44
	PLUSPLUS  shift 45
	MINUSMINUS  shift 46
	ABS  shift 47
	BOOL  shift 27
	NOT  shift 49
	STRING  shift 25
	AT  shift 31
	.  error

	expression  goto 134
	atomExpression  goto 50
	variable  goto 23
	expression1  goto 39
	expression2  goto 40
	ope1  goto 41
	expression3  goto 42
	accessExpression  goto 51
	litteral  goto 22
	litteralArray  goto 28
	litteralObject  goto 29

state 131
	loopStatement:  SELECT expression AS loopVariable FROM expression selectOptions0 SEMICOLON.    (28)

	.  reduce 28 (src line 141)


state 132
	selectOptions:  selectOptions selectOption.    (33)

	.  reduce 33 (src line 155)


state 133
	selectOption:  WHERE expression.    (34)
	expression:  expression.ope2Bool expression1 

	AND  shift 80
	OR  shift 81
	.  reduce 34 (src line 158)

	ope2Bool  goto 79

state 134
	selectOption:  LIMIT expression.    (35)
	expression:  expression.ope2Bool expression1 

	AND  shift 80
	OR  shift 81
	.  reduce 35 (src line 160)

	ope2Bool  goto 79

65 terminals, 34 nonterminals
87 grammar rules, 135/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
83 working sets used
memory: parser 307/240000
40 extra closures
405 shift entries, 1 exceptions
64 goto entries
185 entries saved by goto default
Optimizer space used: output 240/240000
240 table entries, 47 zero
maximum spread: 65, maximum offset: 130
